--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Phaser Test</h1>
+<html>
+  <head>
+    <title>Phaser test</title>
+  </head>
+  <body>
+    <h1>Phaser Test</h1>
+  </body>
+</html>
