--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ function preload() {
     game.load.crossOrigin = 'anonymous';
 
     game.load.image('phaser', 'sprites/phaser-dude.png');
+    console.log ( "preload done" );
 
 }
 
