--- a/index.html
+++ b/index.html
@@ -7,37 +7,7 @@
   <body>
     <h1>Phaser Test</h1>
         <div id="phaser-example"></div>
-      <script type="text/javascript">
-
-        var IDE_HOOK = false;
-        var VERSION = '2.6.2';
-
-
-var game = new Phaser.Game(800, 600, Phaser.AUTO, 'phaser-example', { preload: preload, create: create, update: update, render: render });
-
-function preload() {
-
-    game.load.baseURL = 'http://examples.phaser.io/assets/';
-    game.load.crossOrigin = 'anonymous';
-
-    game.load.image('phaser', 'sprites/phaser-dude.png');
-    console.log ( "preload done" );
-
-}
-
-          function create() {
-
-    var sprite = game.add.sprite(0, 0, 'phaser');
-
-}
-
-          function update() {
-
-}
-          function render() {
-
-}
-
-      </script>
+        <script src="js/main.js"></script>
+      <!-- done -->
   </body>
 </html>
