splitted functional code

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
-    <script src="js/GameState.js"></script>
+
+<head>
+    <script src="phaser.js"></script>
+    <script src="js/objects/World.js"></script>
+    <script src="js/objects/Player.js"></script>
+    <script src="js/states/BootState.js"></script>
+    <script src="js/states/PreloadState.js"></script>
+    <script src="js/states/GameState.js"></script>
     <title>Phaser test</title>
-  </head>
-  <body>
-    <h1>Phaser Test</h1>
-        <script src="js/main.js"></script>
-      <!-- done -->
-  </body>
+</head>
+
+<body>
+    <script src="js/main.js"></script>
+</body>
+
 </html>
